--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,11 @@
       <artifactId>spring-security-crypto</artifactId>
       <version>5.5.2</version>
     </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-text</artifactId>
+      <version>1.10</version>
+    </dependency>
   </dependencies>
 
   <build>
