--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -22,4 +22,4 @@ jobs:
       run: mvn clean install
 
     - name: Run Tests
-      run: mvn test
+      run: mvn -Dtest="src/test/java/*Test.java" test
